# shuttle-saas-example

./: CustomerDashboard  README.md  next.config.js  package-lock.json  package.json
api/: .gitignore  Cargo.toml
api/migrations/: 20230415200225_schema.sql
api/src/: auth.rs  customers.rs  dashboard.rs  deals.rs  mail.rs  main.rs  payments.rs  router.rs
backend/src/: auth.rs  customers.rs  deals.rs  main.rs  router.rs
src/: zustandStore.ts
src/components/: AuthedLayout.tsx  CustomerSingleModal.tsx  Layout.tsx  RecentSales.tsx  SalesChart.tsx  TopClients.tsx  navbar.tsx
src/pages/: index.tsx  login.tsx  pricing.tsx  register.tsx
src/pages/dashboard/: index.tsx
src/pages/dashboard/customers/: create.tsx  index.tsx
src/pages/dashboard/deals/: create.tsx  index.tsx
src/pages/dashboard/upgrade/: index.tsx
src/pages/dashboard/upgrade/checkout/: failed.tsx  index.tsx  success.tsx
