[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.14.0"
axum = "0.6.15"
shuttle-axum = "0.14.0"
tokio = "1.27.0"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres"] }
serde = { version = "1.0.160", features = ["derive"] }
shuttle-shared-db = { version = "0.14.0", features = ["postgres"] }
shuttle-secrets = "0.14.0"
shuttle-static-folder = "0.14.0"
axum-extra = { version = "0.7.3", features = ["cookie-private"] }
time = "0.3.20"
lettre = "0.10.4"
http = "0.2.9"
axum-macros = "0.3.7"
async-stripe = { version = "0.21.0", features = ["runtime-tokio-hyper"] }
